add supplement about svd for linear transformation

--- a/02-space_stretching.ipynb
+++ b/02-space_stretching.ipynb
@@ -77,7 +77,8 @@
     "  V^\\top\n",
     "\\end{equation}\n",
     "$\n",
-    "* Compute $y = Wx$\n",
+    "* Compute $y = Wx$, transform x space to y space using A\n",
+    "* $S$ stretching, contains singular values\n",
     "* Larger singular values stretch the points\n",
     "* Smaller singular values push them together\n",
     "* $U, V$ rotate/reflect"
